# kquantizer

./: .gitignore  CMakeLists.txt  README.md  kdtree  kdtree.cpp  main.cpp  palettes.txt
.cache/clangd/index/: blur.cpp.D621529F7DA7C3A2.idx  blur.h.BD144B593ECF7748.idx  easyargs.h.90BA037BFC8FB936.idx  grid.h.86E34C0800DB6B30.idx  kdtree.h.D9626E776BAA843B.idx  main.cpp.B37EE535DC0B70D6.idx  palette-parsing.cpp.7B6F886ADA13063B.idx  palette-parsing.h.3F66FF94009DB911.idx  reshaping.cpp.8CC5F241F27E3895.idx  reshaping.h.2058BBD0CAA81A29.idx  stb_image.h.931D0A15DA238CD4.idx  stb_image_write.h.33C2EB72209EA7BD.idx
include/: blur.h  easyargs.h  grid.h  kdtree.h  palette-parsing.h  reshaping.h
src/: blur.cpp  kdtree.cpp  palette-parsing.cpp  palette_parser.cpp  reshaping.cpp
